fix overflow

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,7 +2,6 @@ html, body {
     text-align: center;
     background-color: lightblue;
     height: 100%;
-    overflow: auto;
 }
 
 content {
